ChangeLog PeerGuardian Linux (pgl)


pgl 2.0.2~WIP

  [ jre ]
  * email stats on every stop/restart (except when the system is halted). Reset
    stats in email_stats instead of just dumping them.
  * default to use builtin LSB init-functions instead of systemwide functions
  * added option to activate the iptables setup only for specified interfaces.

-- jre <jre-phoenix@users.sourceforge.net>  WIP


pgl 2.0.1

  [ jre ]
  * use "-m multiport --ports" for port whitelisting
  * added delete_iptables if inserting iptables fails
  * added direct support for all currently available iblocklist URLs in the
    format http://list.iblocklist.com/lists/<author>/<list>. They are recognized
    to be the same as the cryptic iblocklist URLs, and if available the original
    upstream URLs. Simplified code.
  * updated documentation and 2.0.0 ChangeLog

 -- jre <jre-phoenix@users.sourceforge.net>  Wed, 16 Jun 2010 14:33:52 +0200


pgl 2.0.0

  * initial release, based on moblock/nfblock and blockcontrol

  [ jre ]
  * common Gnu make buildsystem for pgld and pglcmd
  * updated documentation

  [ Cade Robinson ]
  * common cmake buildsystem for pgld, pglcmd and pgl-gui (superseded by
    Gnu make buildsystem, but still needed for pgl-gui)

  [ Dimitris Palyvos-Giannas ]
  * work on pgl-gui has started, but is not in a working state, yet


  * CHANGES NFBLOCK - PGLD

    [ jre ]
    - transition to pglcmd at peerguardian.sourceforge.net
      - removed cron* and init.d. This is covered by pglcmd.
      - removed dl-blocklistpro.pl: blocklistpro is for manual download only. Of
        course we honour the decisions of the blocklist providers. The
        underlying single lists of ipfilter.dat can be downloaded with pglcmd.
    - updated output when pgld is called without option
    - change logrotate to work without pglcmd being installed

    [ Cade Robinson ]
    - Changed logging
      - added logging to log file