@@ -1,6 +1,0 @@
-project(pgl)
-cmake_minimum_required(VERSION 2.6)
-
-add_subdirectory(pgl)
-
-
