@@ -1,17 +1,0 @@
-project(pgl)
-cmake_minimum_required(VERSION 2.6)
-
-SET(GLOBALNAME pgl)
-SET(PGLVERSION git)
-
-if(NOT NOPGLD)
-    add_subdirectory(pgld)
-endif(NOT NOPGLD)
-
-if(NOT NOPGLCMD)
-    add_subdirectory(pglcmd)
-endif(NOT NOPGLCMD)
-
-if(NOT NOPGLGUI)
-    add_subdirectory(pgl-gui)
-endif(NOT NOPGLGUI)
