@@ -5,12 +5,12 @@ Maintainer: PeerGuardian Linux Developers <peerguardian-devel@lists.sourceforge.
 Uploaders: jre <jre-phoenix@users.sourceforge.net>
 Bugs: mailto:peerguardian-devel@lists.sourceforge.net
 Build-Depends: debhelper (>= 7.0.50~),
-#               libqt4-dev,
                po-debconf,
+#               libqt4-dev,
+#               libdbus-1-dev
                zlib1g-dev,
                libnetfilter-queue-dev,
-               libnfnetlink-dev,
-               libdbus-1-dev
+               libnfnetlink-dev
 Standards-Version: 3.9.1.0
 Homepage: http://peerguardian.sourceforge.net/
 Vcs-Browser: http://peerguardian.git.sourceforge.net/
