@@ -1,5 +1,0 @@
-project(pgl-gui)
-cmake_minimum_required(VERSION 2.6)
-find_package(Qt4 REQUIRED)
-
-add_subdirectory(src)
