@@ -1,3 +1,0 @@
-[Project]
-Manager=KDevCMakeManager
-Name=pgl-gui
