@@ -1,46 +1,0 @@
-MESSAGE(STATUS "Configuring ${PKGNAME}")
-
-set(pgld_SRCS
-    blocklist.c
-    parser.c
-    pgld.c
-    stream.c
-    )
-
-INCLUDE(FindPkgConfig)
-INCLUDE(FindZLIB)
-
-ADD_DEFINITIONS(-Wall -O2 -DPACKAGE_NAME="${PKGNAME}" -DVERSION="${PGLVERSION}" -DPIDFILE="/var/run/${PKGNAME}.pid")
-
-MESSAGE(STATUS "Looking for libnetfilter_queue...")
-pkg_check_modules(NFQUEUE REQUIRED libnetfilter_queue)
-
-MESSAGE(STATUS "Looking for libnfnetlink...")
-pkg_check_modules(NFLINK REQUIRED libnfnetlink)
-
-IF(NOT NODBUS AND NOT LOWMEM)
-    MESSAGE(STATUS "Looking for dbus-1...")
-    pkg_check_modules(DBUS dbus-1)
-ENDIF(NOT NODBUS AND NOT LOWMEM)
-
-
-ADD_EXECUTABLE(${PKGNAME} ${pgld_SRCS})
-TARGET_LINK_LIBRARIES(${PKGNAME} ${NFQUEUE_LIBRARIES} ${NFLINK_LIBRARIES})
-
-IF(ZLIB_FOUND)
-    ADD_DEFINITIONS(-DHAVE_ZLIB)
-    TARGET_LINK_LIBRARIES(${PKGNAME} ${ZLIB_LIBRARIES})
-ENDIF(ZLIB_FOUND)
-
-
-IF(LOWMEM)
-    ADD_DEFINITIONS(-DLOWMEM)
-ELSEIF (DBUS_FOUND)
-    ADD_DEFINITIONS(-DHAVE_DBUS)
-    INCLUDE_DIRECTORIES(${DBUS_INCLUDE_DIRS})
-    TARGET_LINK_LIBRARIES(${PKGNAME} ${DBUS_LIBRARIES})
-ENDIF(LOWMEM)
-
-INSTALL(TARGETS ${PKGNAME} RUNTIME DESTINATION sbin)
-INSTALL(FILES .empty DESTINATION /var/log/${GLOBALNAME} RENAME .empty_${PKGNAME})
-
