@@ -8,6 +8,8 @@ pgl 2.0.2~WIP
     stats in email_stats instead of just dumping them.
   * default to use builtin LSB init-functions instead of systemwide functions
   * added option to activate the iptables setup only for specified interfaces.
+  * added pgl-gui to common GNU Makefile buildsystem, removed cmake relicts
+  * Makefile: removed "-" from variable names, because this sometimes causes problems.
 
 -- jre <jre-phoenix@users.sourceforge.net>  WIP
 
